--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,1 +1,72 @@
-/* You can add global styles to this file, and also import other style files */
+main .form-control
+{
+    /* center form controls */
+    display: inline-block;
+
+    /* override Bootstrap's 100% width for form controls */
+    width: auto;
+}
+
+main
+{
+    /* scroll horizontally as needed */
+    overflow-x: auto;
+
+    /* center contents */
+    text-align: center;
+}
+
+main img
+{
+    /* constrain images on small screens */
+    max-width: 100%;
+}
+
+a img
+{
+    max-height: 60px;
+}
+
+main table
+{
+    /* left-align contents */
+    text-align: left;
+}
+
+.table-responsive
+{
+    height: 375px;
+    overflow-y: auto;
+}
+
+.custom-file
+{
+    text-align: left;
+    width: auto;
+}
+
+h2
+{
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.row
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.option
+{
+    margin-top: 10px;
+}
+
+.navbar-left
+{
+    font-family: 'Spartan', sans-serif;
+    font-size: 48px;
+    margin-right: 50px;
+}
