--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -70,3 +70,11 @@ h2
     font-size: 48px;
     margin-right: 50px;
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
