--- a/ClientApp/src/app/stock/stock.component.html
+++ b/ClientApp/src/app/stock/stock.component.html
@@ -1,1 +1,30 @@
-<p>stock works!</p>
+<table mat-table [dataSource]="tableDataSrc" class="mat-elevation-z8">
+    <ng-container *ngFor="let col of tableCols">
+        <ng-container matColumnDef="{{ col }}">
+            <div *ngIf="col=='update'">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let profile">
+                    <button mat-mini-fab color="primary"><mat-icon>create</mat-icon></button>
+                </td>
+            </div>
+            <div *ngIf="col=='delete'">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let profile">
+                    <button mat-mini-fab color="primary"><mat-icon>delete_forever</mat-icon></button>
+                </td>
+            </div>
+            <div *ngIf="col=='price'; else elseBlock">
+                <th mat-header-cell *matHeaderCellDef> {{ col | titlecase }} </th>
+                <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
+            </div>
+            <ng-template #elseBlock>
+                <th mat-header-cell *matHeaderCellDef> {{ col | titlecase }} </th>
+                <td mat-cell *matCellDef="let profile"> {{ profile[col] }} </td>
+            </ng-template>
+        </ng-container>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
+    <tr mat-row *matRowDef="let row; columns: tableCols"></tr>
+</table>
+<mat-icon>home</mat-icon>
