--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -1,20 +1,4 @@
-main .form-control
-{
-    /* center form controls */
-    display: inline-block;
-
-    /* override Bootstrap's 100% width for form controls */
-    width: auto;
-}
-
-main
-{
-    /* scroll horizontally as needed */
-    overflow-x: auto;
-
-    /* center contents */
-    text-align: center;
-}
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 main img
 {
@@ -27,41 +11,10 @@ a img
     max-height: 60px;
 }
 
-main table
-{
-    /* left-align contents */
-    text-align: left;
-}
-
-.table-responsive
-{
-    height: 375px;
-    overflow-y: auto;
-}
-
 .custom-file
 {
     text-align: left;
     width: auto;
-}
-
-h2
-{
-    margin-top: 50px;
-    margin-bottom: 100px;
-}
-
-.row
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.option
-{
-    margin-top: 10px;
 }
 
 .navbar-left
@@ -78,3 +31,6 @@ footer {
     width: 100%;
     text-align: center;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
