--- a/ClientApp/src/app/stock/stock.component.html
+++ b/ClientApp/src/app/stock/stock.component.html
@@ -1,4 +1,6 @@
-<table mat-table [dataSource]="tableDataSrc" class="mat-elevation-z8">
+<input matInput (keyup)="onSearchInput($event)" placeholder="Search product">
+
+<table mat-table [dataSource]="tableDataSrc" matSort class="mat-elevation-z8">
     <ng-container *ngFor="let col of tableCols">
         <ng-container matColumnDef="{{ col }}">
             <div *ngIf="col=='update'">
@@ -14,11 +16,11 @@
                 </td>
             </div>
             <div *ngIf="col=='price'; else elseBlock">
-                <th mat-header-cell *matHeaderCellDef> {{ col | titlecase }} </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
                 <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
             </div>
             <ng-template #elseBlock>
-                <th mat-header-cell *matHeaderCellDef> {{ col | titlecase }} </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
                 <td mat-cell *matCellDef="let profile"> {{ profile[col] }} </td>
             </ng-template>
         </ng-container>
@@ -27,4 +29,5 @@
     <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
     <tr mat-row *matRowDef="let row; columns: tableCols"></tr>
 </table>
-<mat-icon>home</mat-icon>
+
+<mat-paginator [pageSizeOptions]="[3, 5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
