--- a/ClientApp/src/app/stock/stock.component.html
+++ b/ClientApp/src/app/stock/stock.component.html
@@ -12,10 +12,10 @@
             <div *ngIf="col=='delete'">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let profile">
-                    <button mat-mini-fab color="primary"><mat-icon>delete_forever</mat-icon></button>
+                    <button mat-mini-fab color="primary" (click)="delete(profile['idProduct'])"><mat-icon>delete_forever</mat-icon></button>
                 </td>
             </div>
-            <div *ngIf="col=='price'; else elseBlock">
+            <div *ngIf="col=='currentPrice'; else elseBlock">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
                 <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
             </div>
