--- a/ClientApp/src/app/stock/stock.component.html
+++ b/ClientApp/src/app/stock/stock.component.html
@@ -6,7 +6,9 @@
             <div *ngIf="col=='update'">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let profile">
-                    <button mat-mini-fab color="primary"><mat-icon>create</mat-icon></button>
+                    <a routerLink="/product/{{profile['idProduct']}}">
+                        <button mat-mini-fab color="primary"><mat-icon>create</mat-icon></button>
+                    </a>
                 </td>
             </div>
             <div *ngIf="col=='delete'">
