--- a/ClientApp/src/app/product-detail/product-detail.component.html
+++ b/ClientApp/src/app/product-detail/product-detail.component.html
@@ -1,45 +1,45 @@
-<form [formGroup]="productForm" (ngSubmit)="onSubmit(productForm.value)">
+<form [formGroup]="productForm" (ngSubmit)="onSubmit(productForm.getRawValue())">
 
     <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
+        <td style="width:6em"><mat-form-field appearance="standard" style="width:6em">
             <mat-label>ID</mat-label>
-            <input matInput #idProduct type="number" disabled>
+            <input matInput formControlName="idProduct" type="number">
         </mat-form-field></td>
         <td><mat-form-field appearance="standard">
-            <mat-label>Name</mat-label>
-            <input matInput #name maxlength="200">
+            <mat-label>Category</mat-label>
+                <input matInput formControlName="category" maxlength="100">
         </mat-form-field></td>
     </tr></table>
 
     <mat-form-field appearance="standard">
-        <mat-label>Category</mat-label>
-            <input matInput #category maxlength="100">
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" maxlength="200" required>
     </mat-form-field>
 
     <mat-form-field appearance="standard">
         <mat-label>Description</mat-label>
-            <textarea matInput #description maxlength="2000" cdkTextareaAutosize></textarea>
+            <textarea matInput #description formControlName="description" maxlength="2000" cdkTextareaAutosize></textarea>
             <mat-hint align="end">{{description.value?.length || 0}}/2000</mat-hint>
     </mat-form-field>
 
-    <mat-form-field appearance="standard">
-        <mat-label>Price</mat-label>
-            <input matInput #currentPrice type="number" min="0" step="0.01">
-            <span matPrefix>$&nbsp;</span>
-    </mat-form-field>
-
-    <mat-form-field appearance="standard">
-        <mat-label>Stock</mat-label>
-            <input matInput #stock type="number" min="0" max="999999">
-    </mat-form-field>
-
-    <mat-form-field appearance="standard">
-        <mat-label>Purchases</mat-label>
-            <input matInput #purchases type="number" disabled>
-    </mat-form-field>
+    <table cellspacing="0"><tr>
+        <td><mat-form-field appearance="standard">
+            <mat-label>Price</mat-label>
+                <input matInput formControlName="currentPrice" type="number" min="0" step="0.01" required>
+                <span matPrefix>$&nbsp;</span>
+        </mat-form-field></td>
+        <td><mat-form-field appearance="standard">
+            <mat-label>Stock</mat-label>
+                <input matInput formControlName="stock" type="number" min="0" max="99999999">
+        </mat-form-field></td>
+        <td><mat-form-field appearance="standard">
+            <mat-label>Purchases</mat-label>
+                <input matInput formControlName="purchases" type="number">
+        </mat-form-field></td>
+    </tr></table>
 
     <div class="button-row">
-        <button mat-flat-button color="accent" class="button" type="submit">Save</button>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!productForm.valid">Save</button>
         <button mat-flat-button color="primary" (click)="goBack()">Go back</button>
     </div>
 
