--- a/ClientApp/src/app/stock/stock.component.html
+++ b/ClientApp/src/app/stock/stock.component.html
@@ -6,9 +6,7 @@
             <div *ngIf="col=='update'">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let profile">
-                    <a routerLink="/product/{{profile['idProduct']}}">
-                        <button mat-mini-fab color="primary"><mat-icon>create</mat-icon></button>
-                    </a>
+                    <a mat-mini-fab color="primary" routerLink="/product/{{profile['idProduct']}}"><mat-icon>create</mat-icon></a>
                 </td>
             </div>
             <div *ngIf="col=='delete'">
@@ -18,7 +16,7 @@
                 </td>
             </div>
             <div *ngIf="col=='currentPrice'; else elseBlock">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
                 <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
             </div>
             <ng-template #elseBlock>
