--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark border" style="background-color: #48B;">
-  <a href="/" class="navbar-left" style="text-decoration: none">ITTACA</a>
+  <a href="/" class="navbar-left">ITTACA</a>
   <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
     <span class="navbar-toggler-icon"></span>
   </button>
