--- a/ClientApp/src/app/customers/customers.component.html
+++ b/ClientApp/src/app/customers/customers.component.html
@@ -19,7 +19,7 @@
                 <div *ngIf="col=='delete'">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let profile">
-                        <button mat-mini-fab color="primary" (click)="delete(profile['idCustomer'])">
+                        <button mat-mini-fab color="primary" (click)="delete(profile)">
                             <mat-icon>delete_forever</mat-icon>
                         </button>
                     </td>
