--- a/ClientApp/src/app/employees/employees.component.html
+++ b/ClientApp/src/app/employees/employees.component.html
@@ -1,1 +1,51 @@
-<p>employees works!</p>
+<div>
+    <mat-form-field appearance="fill">
+        <mat-label>Search employee</mat-label>
+        <input matInput (keyup)="onSearchInput($event)">
+        <mat-icon matPrefix>search</mat-icon>
+    </mat-form-field>
+
+    <a mat-raised-button color="primary" routerLink="/employee-detail">New employee</a>
+</div>
+
+<div class="table-responsive">
+    <table mat-table [dataSource]="tableDataSrc" matSort class="mat-elevation-z8">
+        <ng-container *ngFor="let col of tableCols">
+            <ng-container matColumnDef="{{ col }}">
+                <div *ngIf="col=='update'">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let profile">
+                        <a mat-mini-fab color="primary" routerLink="/employee-detail/{{profile['idEmployee']}}">
+                            <mat-icon>create</mat-icon>
+                        </a>
+                    </td>
+                </div>
+                <div *ngIf="col=='delete'">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let profile">
+                        <button mat-mini-fab color="primary" (click)="delete(profile)">
+                            <mat-icon>delete_forever</mat-icon>
+                        </button>
+                    </td>
+                </div>
+                <div *ngIf="col=='hired' || col=='departed'">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
+                    <td mat-cell *matCellDef="let profile"> {{ profile[col] | date:'dd/MM/yyyy' }} </td>
+                </div>
+                <div *ngIf="col=='salary'; else elseBlock">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Salary </th>
+                    <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
+                </div>
+                <ng-template #elseBlock>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
+                    <td mat-cell *matCellDef="let profile"> {{ profile[col] }} </td>
+                </ng-template>
+            </ng-container>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
+        <tr mat-row *matRowDef="let row; columns: tableCols"></tr>
+    </table>
+</div>
+
+<mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
