--- a/ClientApp/src/app/stock/stock.component.html
+++ b/ClientApp/src/app/stock/stock.component.html
@@ -8,38 +8,40 @@
     <a mat-raised-button color="primary" routerLink="/product">New product</a>
 </div>
 
-<table mat-table [dataSource]="tableDataSrc" matSort class="mat-elevation-z8">
-    <ng-container *ngFor="let col of tableCols">
-        <ng-container matColumnDef="{{ col }}">
-            <div *ngIf="col=='update'">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let profile">
-                    <a mat-mini-fab color="primary" routerLink="/product/{{profile['idProduct']}}">
-                        <mat-icon>create</mat-icon>
-                    </a>
-                </td>
-            </div>
-            <div *ngIf="col=='delete'">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let profile">
-                    <button mat-mini-fab color="primary" (click)="delete(profile['idProduct'])">
-                        <mat-icon>delete_forever</mat-icon>
-                    </button>
-                </td>
-            </div>
-            <div *ngIf="col=='currentPrice'; else elseBlock">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-                <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
-            </div>
-            <ng-template #elseBlock>
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
-                <td mat-cell *matCellDef="let profile"> {{ profile[col] }} </td>
-            </ng-template>
+<div class="table-responsive">
+    <table mat-table [dataSource]="tableDataSrc" matSort class="mat-elevation-z8">
+        <ng-container *ngFor="let col of tableCols">
+            <ng-container matColumnDef="{{ col }}">
+                <div *ngIf="col=='update'">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let profile">
+                        <a mat-mini-fab color="primary" routerLink="/product/{{profile['idProduct']}}">
+                            <mat-icon>create</mat-icon>
+                        </a>
+                    </td>
+                </div>
+                <div *ngIf="col=='delete'">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let profile">
+                        <button mat-mini-fab color="primary" (click)="delete(profile)">
+                            <mat-icon>delete_forever</mat-icon>
+                        </button>
+                    </td>
+                </div>
+                <div *ngIf="col=='currentPrice'; else elseBlock">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+                    <td mat-cell *matCellDef="let profile"> {{ profile[col] | currency }} </td>
+                </div>
+                <ng-template #elseBlock>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col | titlecase }} </th>
+                    <td mat-cell *matCellDef="let profile"> {{ profile[col] }} </td>
+                </ng-template>
+            </ng-container>
         </ng-container>
-    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
-    <tr mat-row *matRowDef="let row; columns: tableCols"></tr>
-</table>
+        <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
+        <tr mat-row *matRowDef="let row; columns: tableCols"></tr>
+    </table>
+</div>
 
 <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
