Angular: orders functionality

--- a/ClientApp/src/app/customer-detail/customer-detail.component.html
+++ b/ClientApp/src/app/customer-detail/customer-detail.component.html
@@ -52,6 +52,7 @@
         <td><mat-form-field appearance="standard">
             <mat-label>Total expenditure</mat-label>
             <input matInput formControlName="totalExpenditure" type="number" step="0.01">
+            <span matPrefix>$&nbsp;</span>
         </mat-form-field></td>
         <td><mat-form-field appearance="standard">
             <mat-label>Total Purchases</mat-label>
