--- a/ClientApp/src/app/order-detail/order-detail.component.html
+++ b/ClientApp/src/app/order-detail/order-detail.component.html
@@ -15,9 +15,9 @@
         </mat-form-field></td>
         <td><mat-form-field appearance="fill">
             <mat-label>Employee ID</mat-label>
-            <mat-select formControlName="idOrder" required>
+            <mat-select formControlName="idEmployee" required>
               <mat-option *ngFor="let employee of employees" [value]="employee.idEmployee">
-                {{employee.viewValue}}
+                {{employee.idEmployee}}
               </mat-option>
             </mat-select>
         </mat-form-field></td>
@@ -52,12 +52,12 @@
             <mat-label>State</mat-label>
             <input matInput formControlName="state">
         </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
+        <td><mat-form-field appearance="fill">
             <mat-label>Priority</mat-label>
             <mat-select formControlName="priority" required>
-                <mat-option>1</mat-option>
-                <mat-option>2</mat-option>
-                <mat-option>3</mat-option>
+                <mat-option value="1">1</mat-option>
+                <mat-option value="2">2</mat-option>
+                <mat-option value="3">3</mat-option>
             </mat-select>
         </mat-form-field></td>
     </tr></table>
