--- a/ClientApp/src/app/customer-detail/customer-detail.component.html
+++ b/ClientApp/src/app/customer-detail/customer-detail.component.html
@@ -3,7 +3,7 @@
     <table cellspacing="0"><tr>
         <td style="width:6em"><mat-form-field appearance="standard" style="width:6em">
             <mat-label>ID</mat-label>
-            <input matInput formControlName="idCustomer" type="number">
+            <input matInput formControlName="id" type="number">
         </mat-form-field></td>
         <td><mat-form-field appearance="standard">
             <mat-label>Name</mat-label>
