--- a/ClientApp/src/app/employees/employees.component.html
+++ b/ClientApp/src/app/employees/employees.component.html
@@ -15,7 +15,7 @@
                 <div *ngIf="col=='update'">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let profile">
-                        <a mat-mini-fab color="primary" routerLink="/employee-detail/{{profile['idEmployee']}}">
+                        <a mat-mini-fab color="primary" routerLink="/employee-detail/{{profile['id']}}">
                             <mat-icon>create</mat-icon>
                         </a>
                     </td>
