Angular: customers NgModule completed

--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -8,3 +8,18 @@ a:visited {
 a:hover, a:active, a:focus {
     color:#fff;
 }
+
+.navbar-left
+{
+    font-family: 'Spartan', sans-serif;
+    font-size: 48px;
+    margin-right: 50px;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+}
