--- a/ClientApp/src/app/employees/employees-list/employees-list.component.html
+++ b/ClientApp/src/app/employees/employees-list/employees-list.component.html
@@ -5,7 +5,7 @@
         <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
 
-    <a mat-raised-button color="primary" routerLink="/employee-detail">New employee</a>
+    <a mat-raised-button color="primary" routerLink="/employees/detail">New employee</a>
 </div>
 
 <div class="table-responsive">
@@ -15,7 +15,7 @@
                 <div *ngIf="col=='update'">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let profile">
-                        <a mat-mini-fab color="primary" routerLink="/employee-detail/{{profile['id']}}">
+                        <a mat-mini-fab color="primary" routerLink="/employees/detail/{{profile['id']}}">
                             <mat-icon>create</mat-icon>
                         </a>
                     </td>
