--- a/ClientApp/src/app/orders/orders-list/orders-list.component.html
+++ b/ClientApp/src/app/orders/orders-list/orders-list.component.html
@@ -11,7 +11,7 @@
                 <div *ngIf="col=='update'">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let profile">
-                        <a mat-mini-fab color="primary" routerLink="/order-detail/{{profile['id']}}">
+                        <a mat-mini-fab color="primary" routerLink="/orders/detail/{{profile['id']}}">
                             <mat-icon>create</mat-icon>
                         </a>
                     </td>
