--- a/ClientApp/src/app/orders/order-detail/order-detail.component.html
+++ b/ClientApp/src/app/orders/order-detail/order-detail.component.html
@@ -75,7 +75,7 @@
 
     <div class="button-row">
         <button mat-flat-button color="accent" type="submit" [disabled]="!orderForm.valid">Save</button>
-        <button mat-flat-button color="primary" (click)="goBack()">Go back</button>
+        <button mat-flat-button color="primary" type="button" (click)="goBack()">Go back</button>
     </div>
 
 </form>
