--- a/ClientApp/src/app/stock/product-detail/product-detail.component.html
+++ b/ClientApp/src/app/stock/product-detail/product-detail.component.html
@@ -40,7 +40,7 @@
 
     <div class="button-row">
         <button mat-flat-button color="accent" type="submit" [disabled]="!productForm.valid">Save</button>
-        <button mat-flat-button color="primary" (click)="goBack()">Go back</button>
+        <button mat-flat-button color="primary" type="button" (click)="goBack()">Go back</button>
     </div>
 
 </form>
