further changes to enable user authentication

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -12,7 +12,7 @@
       <li class="nav-item"><a class="nav-link" routerLink="/stats">Stats</a></li>
     </ul>
     <ul class="navbar-nav ml-auto mt-2">
-      <li class="nav-item"><a class="nav-link">Log Out</a></li>
+      <app-login-menu></app-login-menu>
     </ul>
   </div>
 </nav>
