--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Test
-@namespace Test.Pages
+@using ERPProject
+@namespace ERPProject.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
