Angular: nav-menu component

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,21 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark border" style="background-color: #48B;">
-  <a href="/" class="navbar-left">ITTACA</a>
-  <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbar">
-    <ul class="navbar-nav mr-auto mt-2">
-      <li class="nav-item"><a class="nav-link" routerLink="/stock">Stock</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/customers">Customers</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/employees">Employees</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/orders">Orders</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/stats">Stats</a></li>
-    </ul>
-    <ul class="navbar-nav ml-auto mt-2">
-      <app-login-menu></app-login-menu>
-    </ul>
-  </div>
-</nav>
+<app-nav-menu></app-nav-menu>
 
 <router-outlet></router-outlet>
 
