--- a/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -8,3 +8,10 @@ a:visited {
 a:hover, a:active, a:focus {
     color:#fff;
 }
+
+.navbar-left
+{
+    font-family: 'Spartan', sans-serif;
+    font-size: 48px;
+    margin-right: 50px;
+}
