--- a/ClientApp/src/api-authorization/login-menu/login-menu.component.html
+++ b/ClientApp/src/api-authorization/login-menu/login-menu.component.html
@@ -1,4 +1,4 @@
-<ul class="navbar-nav ml-auto mt-2" *ngIf="isAuthenticated | async">
+<ul class="navbar-nav ml-auto" *ngIf="isAuthenticated | async">
     <li class="nav-item">
         <a  class="nav-link" [routerLink]='["/authentication/profile"]' title="Manage">Hello {{ userName | async }}</a>
     </li>
@@ -6,7 +6,7 @@
         <a  class="nav-link" [routerLink]='["/authentication/logout"]' [state]='{ local: true }' title="Logout">Logout</a>
     </li>
 </ul>
-<ul class="navbar-nav" *ngIf="!(isAuthenticated | async)">
+<ul class="navbar-nav ml-auto" *ngIf="!(isAuthenticated | async)">
   <li class="nav-item">
         <a class="nav-link" [routerLink]='["/authentication/register"]'>Register</a>
     </li>
