--- a/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -9,9 +9,7 @@ a:hover, a:active, a:focus {
     color:#fff;
 }
 
-.navbar-left
+.navbar-brand
 {
     font-family: 'Spartan', sans-serif;
-    font-size: 48px;
-    margin-right: 50px;
 }
