--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,17 +1,20 @@
-<nav class="navbar navbar-expand-md navbar-dark border" style="background-color: #48B;">
-    <a href="/" class="navbar-left">ITTACA</a>
-    <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="navbar-nav mr-auto mt-2">
-        <li class="nav-item"><a class="nav-link" routerLink="/stock">Stock</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/customers">Customers</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/employees">Employees</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/orders">Orders</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="/stats">Stats</a></li>
-      </ul>
-      <app-login-menu></app-login-menu>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: #48B;">
+  <a class="navbar-brand" href="/">
+    <img src="/assets/img/ittaca_meander_logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    ITTACA
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbar">
+    <ul class="navbar-nav mr-auto" *ngIf="isAuthenticated | async">
+      <li class="nav-item"><a class="nav-link" routerLink="/stock">Stock</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/customers">Customers</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/employees">Employees</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/orders">Orders</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/stats">Stats</a></li>
+    </ul>
+    <app-login-menu></app-login-menu>
+  </div>
+</nav>
   
