Angular: alert messages

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-nav-menu></app-nav-menu>
-
+<app-messages></app-messages>
 <router-outlet></router-outlet>
-
 <footer class="small text-center text-muted">
   Designed by Oriol Muniz - 2020
 </footer>
