--- a/ClientApp/src/app/stats/stats-datepicker/stats-datepicker.component.html
+++ b/ClientApp/src/app/stats/stats-datepicker/stats-datepicker.component.html
@@ -19,6 +19,9 @@
         <h3>units sold</h3>
     </div>
     <div class="column">
+        <a mat-raised-button color="primary" routerLink="/stats/graph">Graph</a>
+    </div>
+    <div class="column">
         <h1>${{ stats[1] }}</h1>
         <h3>in sales</h3>
     </div>
