stats graph design

--- a/ClientApp/src/app/stats/stats-graph/stats-graph.component.html
+++ b/ClientApp/src/app/stats/stats-graph/stats-graph.component.html
@@ -1,1 +1,13 @@
-<p>stats-graph works!</p>
+<div class="flex">
+    <div class="flex-item">
+        <div style="display: block;">
+        <canvas baseChart width="400" height="200"
+                    [datasets]="lineChartData"
+                    [labels]="lineChartLabels"
+                    [options]="lineChartOptions"
+                    [colors]="lineChartColors"
+                    [legend]="lineChartLegend"
+                    [chartType]="lineChartType"
+                    (chartClick)="chartClicked($event)"></canvas>
+    </div>
+</div>
