--- a/ClientApp/src/app/orders/order-detail/order-detail.component.html
+++ b/ClientApp/src/app/orders/order-detail/order-detail.component.html
@@ -7,15 +7,15 @@
         </mat-form-field></td>
         <td><mat-form-field appearance="standard">
             <mat-label>Customer ID</mat-label>
-            <input matInput formControlName="idCustomer" type="number">
+            <input matInput formControlName="customerId" type="number">
         </mat-form-field></td>
         <td><mat-form-field appearance="standard">
             <mat-label>Product ID</mat-label>
-            <input matInput formControlName="idProduct" type="number">
+            <input matInput formControlName="productId" type="number">
         </mat-form-field></td>
         <td><mat-form-field appearance="fill">
             <mat-label>Employee ID</mat-label>
-            <mat-select formControlName="idEmployee" required>
+            <mat-select formControlName="employeeId" required>
               <mat-option *ngFor="let employee of employees" [value]="employee.id">
                 {{ employee.id }}
               </mat-option>
