--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
@@ -9,11 +9,6 @@
             <mat-label>Position</mat-label>
             <input matInput formControlName="position" maxlength="100" required>
         </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Salary</mat-label>
-            <input matInput formControlName="salary" type="number" min="0" step="0.01" required>
-            <span matPrefix>$&nbsp;</span>
-        </mat-form-field></td>
     </tr></table>
 
     <table cellspacing="0"><tr>
@@ -24,6 +19,18 @@
         <td><mat-form-field appearance="standard">
             <mat-label>Surname</mat-label>
                 <input matInput formControlName="surname" maxlength="35" required>
+        </mat-form-field></td>
+    </tr></table>
+
+    <table cellspacing="0"><tr>
+        <td><mat-form-field appearance="standard">
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" maxlength="320" required>
+        </mat-form-field></td>
+        <td><mat-form-field appearance="standard">
+            <mat-label>Salary</mat-label>
+            <input matInput formControlName="salary" type="number" min="0" step="0.01" required>
+            <span matPrefix>$&nbsp;</span>
         </mat-form-field></td>
     </tr></table>
 
