--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit(employeeForm.getRawValue())">
 
     <table cellspacing="0"><tr>
-        <td style="width:6em"><mat-form-field appearance="standard" style="width:6em">
+        <td><mat-form-field appearance="standard">
             <mat-label>ID</mat-label>
-            <input matInput formControlName="id" type="number">
+            <input matInput formControlName="id">
         </mat-form-field></td>
         <td><mat-form-field appearance="standard">
             <mat-label>Position</mat-label>
