--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="footer border-top text-muted">
+    <footer class="footer border-top text-muted text-center">
         <div class="container">
             &copy; 2020 - Ittaca ERP - <a asp-area="" asp-page="Privacy">Privacy</a>
         </div>
