--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -12,7 +12,7 @@
       <li class="nav-item"><a class="nav-link" routerLink="/customers">Customers</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/employees">Employees</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/orders">Orders</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/stats">Stats</a></li>
+      <li class="nav-item" *ngIf="role == 'Admin'"><a class="nav-link" routerLink="/stats">Stats</a></li>
     </ul>
     <app-login-menu></app-login-menu>
   </div>
