--- a/ClientApp/src/app/orders/order-detail/order-detail.component.html
+++ b/ClientApp/src/app/orders/order-detail/order-detail.component.html
@@ -74,7 +74,7 @@
     </tr></table>
 
     <div class="button-row">
-        <button mat-flat-button color="accent" type="submit" [disabled]="!orderForm.valid">Save</button>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!orderForm.valid" style="margin-right: 15px;">Save</button>
         <button mat-flat-button color="primary" type="button" (click)="goBack()">Go back</button>
     </div>
 
