--- a/ClientApp/src/app/customers/customer-detail/customer-detail.component.html
+++ b/ClientApp/src/app/customers/customer-detail/customer-detail.component.html
@@ -61,7 +61,7 @@
     </tr></table>
 
     <div class="button-row">
-        <button mat-flat-button color="accent" type="submit" [disabled]="!customerForm.valid">Save</button>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!customerForm.valid" style="margin-right: 15px;">Save</button>
         <button mat-flat-button color="primary" type="button" (click)="goBack()">Go back</button>
     </div>
 
