--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.css
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.css
@@ -9,13 +9,7 @@ table, .mat-form-field {
     padding-right: 8px;
 }
 
-button {
-    margin-right: 15px;
-}
-
 .button-row {
-    margin-left: 240px;
-    margin-bottom: 50px;
-    margin-top: 50px;
-    width: 50%;
+    padding-top: 25px;
+    text-align: center;
 }
