--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
@@ -46,7 +46,7 @@
     </tr></table>
 
     <div class="button-row">
-        <button mat-flat-button color="accent" type="submit" [disabled]="!employeeForm.valid">Save</button>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!employeeForm.valid" style="margin-right: 15px;">Save</button>
         <button mat-flat-button color="primary" type="button" (click)="goBack()">Go back</button>
     </div>
 
