--- a/ClientApp/src/app/orders/order-detail/order-detail.component.css
+++ b/ClientApp/src/app/orders/order-detail/order-detail.component.css
@@ -8,11 +8,6 @@ table, .mat-form-field {
     padding-right: 8px;
 }
 
-button {
-    margin-right: 15px;
-}
-
 .button-row {
-    margin: auto;
-    width: 25%;
+    text-align: center;
 }
