--- a/ClientApp/src/app/stock/product-detail/product-detail.component.html
+++ b/ClientApp/src/app/stock/product-detail/product-detail.component.html
@@ -39,7 +39,7 @@
     </tr></table>
 
     <div class="button-row">
-        <button mat-flat-button color="accent" type="submit" [disabled]="!productForm.valid">Save</button>
+        <button mat-flat-button color="accent" type="submit" [disabled]="!productForm.valid" style="margin-right: 15px;">Save</button>
         <button mat-flat-button color="primary" type="button" (click)="goBack()">Go back</button>
     </div>
 
