role service isAdmin() function

--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
@@ -27,7 +27,7 @@
             <mat-label>Email</mat-label>
             <input matInput formControlName="email" maxlength="320" required>
         </mat-form-field></td>
-        <td *ngIf="role === 'Admin'"><mat-form-field appearance="standard">
+        <td *ngIf="isAdmin"><mat-form-field appearance="standard">
             <mat-label>Salary</mat-label>
             <input matInput formControlName="salary" type="number" min="0" step="0.01" required>
             <span matPrefix>$&nbsp;</span>
