--- a/ClientApp/src/app/customers/customer-detail/customer-detail.component.html
+++ b/ClientApp/src/app/customers/customer-detail/customer-detail.component.html
@@ -1,64 +1,69 @@
 <form [formGroup]="customerForm" (ngSubmit)="onSubmit(customerForm.getRawValue())">
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>ID</mat-label>
-            <input matInput formControlName="id">
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Name</mat-label>
-                <input matInput formControlName="name" maxlength="35" required>
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Surname</mat-label>
-                <input matInput formControlName="surname" maxlength="35" required>
-        </mat-form-field></td>
-    </tr></table>
+    <div class="form-responsive">
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email" maxlength="320" required>
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>ID</mat-label>
+                <input matInput formControlName="id">
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Email</mat-label>
+                <input matInput formControlName="email" maxlength="320" required>
+            </mat-form-field></td>
+        </tr></table>
+
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Name</mat-label>
+                    <input matInput formControlName="name" maxlength="35" required>
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Surname</mat-label>
+                    <input matInput formControlName="surname" maxlength="35" required>
+            </mat-form-field></td>
+        </tr></table>
+
+        <mat-form-field appearance="standard">
             <mat-label>Bank account</mat-label>
             <input matInput formControlName="bankAccount" maxlength="50" required>
-        </mat-form-field></td>
-    </tr></table>
+        </mat-form-field>
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Delivery address</mat-label>
-            <input matInput formControlName="deliveryAddress" maxlength="320" required>
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Billing address</mat-label>
-            <input matInput formControlName="billingAddress" maxlength="320" required>
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Delivery address</mat-label>
+                <input matInput formControlName="deliveryAddress" maxlength="320" required>
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Billing address</mat-label>
+                <input matInput formControlName="billingAddress" maxlength="320" required>
+            </mat-form-field></td>
+        </tr></table>
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>First purchase</mat-label>
-            <input matInput formControlName="firstPurchase" type="datetime-local">
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Latest Purchase</mat-label>
-            <input matInput formControlName="latestPurchase" type="datetime-local">
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>First purchase</mat-label>
+                <input matInput formControlName="firstPurchase" type="datetime-local">
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Latest Purchase</mat-label>
+                <input matInput formControlName="latestPurchase" type="datetime-local">
+            </mat-form-field></td>
+        </tr></table>
 
-    <table cellspacing="0" *ngIf="isAdmin"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Total expenditure</mat-label>
-            <input matInput formControlName="totalExpenditure" type="number" step="0.01">
-            <span matPrefix>$&nbsp;</span>
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Total Purchases</mat-label>
-            <input matInput formControlName="totalPurchases" type="number">
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0" *ngIf="isAdmin"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Total expenditure</mat-label>
+                <input matInput formControlName="totalExpenditure" type="number" step="0.01">
+                <span matPrefix>$&nbsp;</span>
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Total Purchases</mat-label>
+                <input matInput formControlName="totalPurchases" type="number">
+            </mat-form-field></td>
+        </tr></table>
+
+    </div>
 
     <div class="button-row">
         <button mat-flat-button color="accent" type="submit" [disabled]="!customerForm.valid" style="margin-right: 15px;">Save</button>
