--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.css
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.css
@@ -1,6 +1,10 @@
+.form-responsive {
+    overflow-x: auto;
+}
+
 form {
     margin: auto;
-    width: 50%;
+    width: 75%;
     margin-top: 15px;
 }
   
@@ -10,6 +14,7 @@ table, .mat-form-field {
 }
 
 .button-row {
-    padding-top: 25px;
     text-align: center;
+    padding-top: 25px;
+    padding-bottom: 50px;
 }
