--- a/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
+++ b/ClientApp/src/app/employees/employee-detail/employee-detail.component.html
@@ -1,49 +1,53 @@
 <form [formGroup]="employeeForm" (ngSubmit)="onSubmit(employeeForm.getRawValue())">
+    
+    <div class="form-responsive">
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>ID</mat-label>
-            <input matInput formControlName="id">
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Position</mat-label>
-            <input matInput formControlName="position" maxlength="100" required>
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>ID</mat-label>
+                <input matInput formControlName="id">
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Position</mat-label>
+                <input matInput formControlName="position" maxlength="100" required>
+            </mat-form-field></td>
+        </tr></table>
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Name</mat-label>
-                <input matInput formControlName="name" maxlength="35" required>
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Surname</mat-label>
-                <input matInput formControlName="surname" maxlength="35" required>
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Name</mat-label>
+                    <input matInput formControlName="name" maxlength="35" required>
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Surname</mat-label>
+                    <input matInput formControlName="surname" maxlength="35" required>
+            </mat-form-field></td>
+        </tr></table>
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email" maxlength="320" required>
-        </mat-form-field></td>
-        <td *ngIf="isAdmin"><mat-form-field appearance="standard">
-            <mat-label>Salary</mat-label>
-            <input matInput formControlName="salary" type="number" min="0" step="0.01" required>
-            <span matPrefix>$&nbsp;</span>
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Email</mat-label>
+                <input matInput formControlName="email" maxlength="320" required>
+            </mat-form-field></td>
+            <td *ngIf="isAdmin"><mat-form-field appearance="standard">
+                <mat-label>Salary</mat-label>
+                <input matInput formControlName="salary" type="number" min="0" step="0.01" required>
+                <span matPrefix>$&nbsp;</span>
+            </mat-form-field></td>
+        </tr></table>
 
-    <table cellspacing="0"><tr>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Hired</mat-label>
-            <input matInput formControlName="hired" type="datetime-local">
-        </mat-form-field></td>
-        <td><mat-form-field appearance="standard">
-            <mat-label>Departed</mat-label>
-            <input matInput formControlName="departed" type="datetime-local">
-        </mat-form-field></td>
-    </tr></table>
+        <table cellspacing="0"><tr>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Hired</mat-label>
+                <input matInput formControlName="hired" type="datetime-local">
+            </mat-form-field></td>
+            <td><mat-form-field appearance="standard">
+                <mat-label>Departed</mat-label>
+                <input matInput formControlName="departed" type="datetime-local">
+            </mat-form-field></td>
+        </tr></table>
+
+    </div>
 
     <div class="button-row">
         <button mat-flat-button color="accent" type="submit" [disabled]="!employeeForm.valid" style="margin-right: 15px;">Save</button>
@@ -51,3 +55,4 @@
     </div>
 
 </form>
+
