--- a/ClientApp/src/app/stock/product-detail/product-detail.component.css
+++ b/ClientApp/src/app/stock/product-detail/product-detail.component.css
@@ -1,6 +1,10 @@
+.form-responsive {
+    overflow-x: auto;
+}
+
 form {
     margin: auto;
-    width: 50%;
+    width: 75%;
 }
   
 table, .mat-form-field {
@@ -9,6 +13,7 @@ table, .mat-form-field {
 }
 
 .button-row {
-    padding-top: 30px;
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 50px;
 }
